--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
-            <textarea id="input-current" class="form-control" rows="20"></textarea>
+            <textarea id="input-current" placeholder="Current Models" class="form-control" rows="20"></textarea>
           </div>
         </div>
         <div class="col-md-6">
           <div class="form-group">
-            <textarea id="input-available" class="form-control" rows="20"></textarea>
+            <textarea id="input-available" placeholder="Available Models" class="form-control" rows="20"></textarea>
           </div>
         </div>
       </div>
