--- a/index.html
+++ b/index.html
@@ -30,18 +30,19 @@
 
       <div id="result">
         <table class="table table-hover">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Current</th>
-                  <th>New</th>
-                </tr>
-              </thead>
-              <tbody id="resultTableBody">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Current</th>
+              <th>New</th>
+            </tr>
+          </thead>
+          <tbody id="resultTableBody">
 
-              </tbody>
-            </table>
-      </div </form>
+          </tbody>
+        </table>
+      </div>
+    </form>
 
   </div>
 
